lab1/Starter1/y.output
Grammar

    0 $accept: program $end

    1 program: tokens

    2 tokens: tokens token
    3       | /* empty */

    4 token: IDENTIFIER
    5      | PLUS
    6      | MINUS
    7      | TIMES
    8      | DIV
    9      | NOT
   10      | OR
   11      | AND
   12      | XOR
   13      | GT
   14      | LT
   15      | GEQ
   16      | LEQ
   17      | EQ
   18      | NEQ
   19      | ASN
   20      | BOOLEAN
   21      | CONST
   22      | VOID
   23      | STRING
   24      | INTEGER
   25      | FLOAT_NUM
   26      | INT
   27      | BOOL
   28      | FLOAT
   29      | VEC2
   30      | VEC3
   31      | VEC4
   32      | BVEC2
   33      | BVEC3
   34      | BVEC4
   35      | IVEC2
   36      | IVEC3
   37      | IVEC4
   38      | IF
   39      | ELSE
   40      | WHILE
   41      | COMMA
   42      | SEMICOL
   43      | LPAREN
   44      | RPAREN
   45      | LBRACE
   46      | RBRACE
   47      | LBRACKET
   48      | RBRACKET
   49      | DP3
   50      | LIT
   51      | RSQ


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 4
PLUS (259) 5
MINUS (260) 6
TIMES (261) 7
DIV (262) 8
NOT (263) 9
OR (264) 10
AND (265) 11
XOR (266) 12
GT (267) 13
LT (268) 14
GEQ (269) 15
LEQ (270) 16
EQ (271) 17
NEQ (272) 18
ASN (273) 19
BOOLEAN (274) 20
CONST (275) 21
VOID (276) 22
STRING (277) 23
INTEGER (278) 24
FLOAT_NUM (279) 25
IF (280) 38
ELSE (281) 39
WHILE (282) 40
COMMA (283) 41
SEMICOL (284) 42
LPAREN (285) 43
RPAREN (286) 44
LBRACE (287) 45
RBRACE (288) 46
LBRACKET (289) 47
RBRACKET (290) 48
INT (291) 26
BOOL (292) 27
FLOAT (293) 28
VEC2 (294) 29
VEC3 (295) 30
VEC4 (296) 31
BVEC2 (297) 32
BVEC3 (298) 33
BVEC4 (299) 34
IVEC2 (300) 35
IVEC3 (301) 36
IVEC4 (302) 37
DP3 (303) 49
LIT (304) 50
RSQ (305) 51


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
tokens (53)
    on left: 2 3, on right: 1 2
token (54)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51, on right: 2


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (tokens)

    program  go to state 1
    tokens   go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: tokens .
    2 tokens: tokens . token

    IDENTIFIER  shift, and go to state 4
    PLUS        shift, and go to state 5
    MINUS       shift, and go to state 6
    TIMES       shift, and go to state 7
    DIV         shift, and go to state 8
    NOT         shift, and go to state 9
    OR          shift, and go to state 10
    AND         shift, and go to state 11
    XOR         shift, and go to state 12
    GT          shift, and go to state 13
    LT          shift, and go to state 14
    GEQ         shift, and go to state 15
    LEQ         shift, and go to state 16
    EQ          shift, and go to state 17
    NEQ         shift, and go to state 18
    ASN         shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    CONST       shift, and go to state 21
    VOID        shift, and go to state 22
    STRING      shift, and go to state 23
    INTEGER     shift, and go to state 24
    FLOAT_NUM   shift, and go to state 25
    IF          shift, and go to state 26
    ELSE        shift, and go to state 27
    WHILE       shift, and go to state 28
    COMMA       shift, and go to state 29
    SEMICOL     shift, and go to state 30
    LPAREN      shift, and go to state 31
    RPAREN      shift, and go to state 32
    LBRACE      shift, and go to state 33
    RBRACE      shift, and go to state 34
    LBRACKET    shift, and go to state 35
    RBRACKET    shift, and go to state 36
    INT         shift, and go to state 37
    BOOL        shift, and go to state 38
    FLOAT       shift, and go to state 39
    VEC2        shift, and go to state 40
    VEC3        shift, and go to state 41
    VEC4        shift, and go to state 42
    BVEC2       shift, and go to state 43
    BVEC3       shift, and go to state 44
    BVEC4       shift, and go to state 45
    IVEC2       shift, and go to state 46
    IVEC3       shift, and go to state 47
    IVEC4       shift, and go to state 48
    DP3         shift, and go to state 49
    LIT         shift, and go to state 50
    RSQ         shift, and go to state 51

    $default  reduce using rule 1 (program)

    token  go to state 52


state 3

    0 $accept: program $end .

    $default  accept


state 4

    4 token: IDENTIFIER .

    $default  reduce using rule 4 (token)


state 5

    5 token: PLUS .

    $default  reduce using rule 5 (token)


state 6

    6 token: MINUS .

    $default  reduce using rule 6 (token)


state 7

    7 token: TIMES .

    $default  reduce using rule 7 (token)


state 8

    8 token: DIV .

    $default  reduce using rule 8 (token)


state 9

    9 token: NOT .

    $default  reduce using rule 9 (token)


state 10

   10 token: OR .

    $default  reduce using rule 10 (token)


state 11

   11 token: AND .

    $default  reduce using rule 11 (token)


state 12

   12 token: XOR .

    $default  reduce using rule 12 (token)


state 13

   13 token: GT .

    $default  reduce using rule 13 (token)


state 14

   14 token: LT .

    $default  reduce using rule 14 (token)


state 15

   15 token: GEQ .

    $default  reduce using rule 15 (token)


state 16

   16 token: LEQ .

    $default  reduce using rule 16 (token)


state 17

   17 token: EQ .

    $default  reduce using rule 17 (token)


state 18

   18 token: NEQ .

    $default  reduce using rule 18 (token)


state 19

   19 token: ASN .

    $default  reduce using rule 19 (token)


state 20

   20 token: BOOLEAN .

    $default  reduce using rule 20 (token)


state 21

   21 token: CONST .

    $default  reduce using rule 21 (token)


state 22

   22 token: VOID .

    $default  reduce using rule 22 (token)


state 23

   23 token: STRING .

    $default  reduce using rule 23 (token)


state 24

   24 token: INTEGER .

    $default  reduce using rule 24 (token)


state 25

   25 token: FLOAT_NUM .

    $default  reduce using rule 25 (token)


state 26

   38 token: IF .

    $default  reduce using rule 38 (token)


state 27

   39 token: ELSE .

    $default  reduce using rule 39 (token)


state 28

   40 token: WHILE .

    $default  reduce using rule 40 (token)


state 29

   41 token: COMMA .

    $default  reduce using rule 41 (token)


state 30

   42 token: SEMICOL .

    $default  reduce using rule 42 (token)


state 31

   43 token: LPAREN .

    $default  reduce using rule 43 (token)


state 32

   44 token: RPAREN .

    $default  reduce using rule 44 (token)


state 33

   45 token: LBRACE .

    $default  reduce using rule 45 (token)


state 34

   46 token: RBRACE .

    $default  reduce using rule 46 (token)


state 35

   47 token: LBRACKET .

    $default  reduce using rule 47 (token)


state 36

   48 token: RBRACKET .

    $default  reduce using rule 48 (token)


state 37

   26 token: INT .

    $default  reduce using rule 26 (token)


state 38

   27 token: BOOL .

    $default  reduce using rule 27 (token)


state 39

   28 token: FLOAT .

    $default  reduce using rule 28 (token)


state 40

   29 token: VEC2 .

    $default  reduce using rule 29 (token)


state 41

   30 token: VEC3 .

    $default  reduce using rule 30 (token)


state 42

   31 token: VEC4 .

    $default  reduce using rule 31 (token)


state 43

   32 token: BVEC2 .

    $default  reduce using rule 32 (token)


state 44

   33 token: BVEC3 .

    $default  reduce using rule 33 (token)


state 45

   34 token: BVEC4 .

    $default  reduce using rule 34 (token)


state 46

   35 token: IVEC2 .

    $default  reduce using rule 35 (token)


state 47

   36 token: IVEC3 .

    $default  reduce using rule 36 (token)


state 48

   37 token: IVEC4 .

    $default  reduce using rule 37 (token)


state 49

   49 token: DP3 .

    $default  reduce using rule 49 (token)


state 50

   50 token: LIT .

    $default  reduce using rule 50 (token)


state 51

   51 token: RSQ .

    $default  reduce using rule 51 (token)


state 52

    2 tokens: tokens token .

    $default  reduce using rule 2 (tokens)
